--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "jspdf": "2.5.2",
+    "jspdf": "^2.5.2",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
